<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
		<modelVersion>4.0.0</modelVersion>
		<groupId>kr.co.expernet</groupId>
		<artifactId>tnplatform</artifactId>
		<packaging>war</packaging>
		<version>0.0.1-SNAPSHOT</version>
		<name>tnplatform Maven Webapp</name>
		<url>http://maven.apache.org</url>
		<properties>
				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
				<!-- Test -->
				<version.junit>4.12</version.junit>
				<!-- Logging -->
				<version.slf4j>1.7.25</version.slf4j>
				<version.logback>1.2.3</version.logback>
				<!-- Spring -->
				<version.spring>4.3.12.RELEASE</version.spring>
				<!-- Servlet -->
				<version.servlet>4.0.0</version.servlet>
				<!-- MyBatis -->
				<version.mybatis>3.4.5</version.mybatis>
				<version.mybatis.spring>1.3.1</version.mybatis.spring>
				<version.dbcp2>2.1.1</version.dbcp2>
				<!-- Maria DB -->
				<version.mariadb>2.1.2</version.mariadb>
				<!-- JSON -->
				<version.jackson>2.9.2</version.jackson>
		</properties>
		<dependencies>
				<!-- TEST -->
				<dependency>
						<groupId>junit</groupId>
						<artifactId>junit</artifactId>
						<version>${version.junit}</version>
						<scope>test</scope>
				</dependency>
				<dependency>
						<groupId>org.springframework</groupId>
						<artifactId>spring-test</artifactId>
						<version>${version.spring}</version>
						<scope>test</scope>
						<exclusions>
								<exclusion>
										<artifactId>commons-logging</artifactId>
										<groupId>commons-logging</groupId>
								</exclusion>
						</exclusions>
				</dependency>
				<!-- :: hamcrest -->
				<dependency>
						<groupId>org.hamcrest</groupId>
						<artifactId>hamcrest-library</artifactId>
						<version>1.3</version>
						<scope>test</scope>
				</dependency>
				<!-- :: json-path -->
				<dependency>
						<groupId>com.jayway.jsonpath</groupId>
						<artifactId>json-path</artifactId>
						<version>2.4.0</version>
						<scope>test</scope>
				</dependency>
				<!-- Logging with SLF4J & LogBack -->
				<dependency>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-api</artifactId>
						<version>${version.slf4j}</version>
				</dependency>
				<dependency>
						<groupId>org.slf4j</groupId>
						<artifactId>jcl-over-slf4j</artifactId>
						<version>${version.slf4j}</version>
				</dependency>
				<dependency>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-classic</artifactId>
						<version>${version.logback}</version>
				</dependency>
				<dependency>
						<groupId>org.springframework</groupId>
						<artifactId>spring-webmvc</artifactId>
						<version>${version.spring}</version>
						<exclusions>
								<exclusion>
										<artifactId>commons-logging</artifactId>
										<groupId>commons-logging</groupId>
								</exclusion>
						</exclusions>
				</dependency>
				<!-- SERVLET -->
				<dependency>
						<groupId>javax.servlet</groupId>
						<artifactId>javax.servlet-api</artifactId>
						<version>${version.servlet}</version>
						<scope>provided</scope>
				</dependency>
				<!-- MyBatis -->
				<dependency>
						<groupId>org.mybatis</groupId>
						<artifactId>mybatis</artifactId>
						<version>${version.mybatis}</version>
				</dependency>
				<dependency>
						<groupId>org.mybatis</groupId>
						<artifactId>mybatis-spring</artifactId>
						<version>${version.mybatis.spring}</version>
				</dependency>
				<dependency>
						<groupId>org.springframework</groupId>
						<artifactId>spring-jdbc</artifactId>
						<version>${version.spring}</version>
				</dependency>
				<dependency>
						<groupId>org.apache.commons</groupId>
						<artifactId>commons-dbcp2</artifactId>
						<version>${version.dbcp2}</version>
				</dependency>
				<!-- Maria DB -->
				<dependency>
						<groupId>org.mariadb.jdbc</groupId>
						<artifactId>mariadb-java-client</artifactId>
						<version>${version.mariadb}</version>
				</dependency>
				<!-- JSON -->
				<dependency>
						<groupId>com.fasterxml.jackson.core</groupId>
						<artifactId>jackson-core</artifactId>
						<version>${version.jackson}</version>
				</dependency>
				<dependency>
						<groupId>com.fasterxml.jackson.core</groupId>
						<artifactId>jackson-databind</artifactId>
						<version>${version.jackson}</version>
				</dependency>
				<dependency>
						<groupId>com.fasterxml.jackson.module</groupId>
						<artifactId>jackson-module-jaxb-annotations</artifactId>
						<version>${version.jackson}</version>
				</dependency>
				<!-- https://mvnrepository.com/artifact/org.pojomatic/pojomatic -->
				<dependency>
						<groupId>org.pojomatic</groupId>
						<artifactId>pojomatic</artifactId>
						<version>2.0.1</version>
				</dependency>
				<!-- XML -->
				<dependency>
						<groupId>org.springframework</groupId>
						<artifactId>spring-oxm</artifactId>
						<version>${version.spring}</version>
				</dependency>
				<!-- https://mvnrepository.com/artifact/org.springframework.hateoas/spring-hateoas -->
				<dependency>
						<groupId>org.springframework.hateoas</groupId>
						<artifactId>spring-hateoas</artifactId>
						<version>0.24.0.RELEASE</version>
				</dependency>
		</dependencies>
		<build>
				<finalName>tnplatform</finalName>
				<plugins>
						<plugin>
								<groupId>org.apache.maven.plugins</groupId>
								<artifactId>maven-compiler-plugin</artifactId>
								<version>3.7.0</version>
								<configuration>
										<source>1.8</source>
										<target>1.8</target>
										<encoding>UTF-8</encoding>
								</configuration>
						</plugin>
						<plugin>
								<groupId>org.apache.maven.plugins</groupId>
								<artifactId>maven-resources-plugin</artifactId>
								<version>3.0.2</version>
								<configuration>
										<encoding>UTF-8</encoding>
								</configuration>
						</plugin>
						<plugin>
								<groupId>org.apache.maven.plugins</groupId>
								<artifactId>maven-surefire-plugin</artifactId>
								<version>2.20.1</version>
								<configuration>
										<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m
												-Dfile.encoding=UTF-8</argLine>
								</configuration>
						</plugin>
				</plugins>
		</build>
</project>

